--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,15 +5,15 @@ name: HOWEST CIA
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
-    branches: [ dev ]
+  #push:
+   #branches: [ dev ]
   pull_request:
     branches: [ dev ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  build & test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -26,6 +26,8 @@ jobs:
         dotnet-version: '3.1.100' #SDK Version to use
     - name: Try to build my code
       run: dotnet build
+    - name: Run Unit tests on my code
+      run: dotnet test -v n
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
