--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build & test:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -26,15 +26,10 @@ jobs:
         dotnet-version: '3.1.100' #SDK Version to use
     - name: Try to build my code
       run: dotnet build
+      
+  test:
+    runs-on: ubuntu-latest
+    steps:
     - name: Run Unit tests on my code
       run: dotnet test -v n
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
