--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ name: HOWEST CIA
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  #push:
-   #branches: [ dev ]
+  push:
+   branches: [ dev, master ]
   pull_request:
     branches: [ dev, master ]
 
