--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,6 @@ jobs:
 
     - name: Run Unit tests on my code
       run: dotnet test -v n
-      
-    - name: Build image
-      run: 
-          docker info
-          docker build -t heroku-test -f Dockerfile . 
 
     - name: Login to Heroku Container registry
       env: 
@@ -45,7 +40,7 @@ jobs:
     - name: Build and push
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      run: heroku container:push web -a ${{ secrets.HEROKU_APP_NAME }} --recursive
+      run: heroku container:push web -a ${{ secrets.HEROKU_APP_NAME }}
     - name: Release
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
