--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
             HEROKU_REGISTRY_URL: registry.heroku.com
             HEROKU_TOKEN : ${{ secrets.HEROKU_TOKEN }}
       run: |
-            docker login --username=_ --password $HEROKU_TOKEN $HEROKU_REGISTRY_URL
+            #docker login --username=_ --password $HEROKU_TOKEN $HEROKU_REGISTRY_URL
             export HEROKU_API_KEY=$HEROKU_TOKEN
             heroku container:login
             heroku container:push web --app cia-github-actions-test
