--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,11 @@ jobs:
 
     #- name: Run Unit tests on my code
      # run: dotnet test -v n
+    - name: login  to heroku
+      env:
+            HEROKU_TOKEN : ${{ secrets.HEROKU_TOKEN }}
+      run: heroku container:login
+         
 
     - name: push to heroku
       env: 
