--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,9 @@ jobs:
     - name: login  to heroku
       env:
             HEROKU_TOKEN : ${{ secrets.HEROKU_TOKEN }}
-      run: heroku container:login
+      run: |
+            heroku login
+            heroku container:login
          
 
     - name: push to heroku
